maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:20: error: Unmatched closing brace '}' ignored here
}
^